--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bundle/plasticboy-markdown"]
 	path = bundle/plasticboy-markdown
 	url = https://github.com/plasticboy/vim-markdown.git
+[submodule "bundle/colorschemes"]
+	path = bundle/colorschemes
+	url = git@github.com:flazz/vim-colorschemes.git
