--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,15 @@
 [submodule "bundle/haproxy"]
 	path = bundle/haproxy
 	url = https://github.com/vim-scripts/haproxy
+[submodule "bundle/tlib_vim"]
+	path = bundle/tlib_vim
+	url = https://github.com/tomtom/tlib_vim.git
+[submodule "bundle/vim-addon-mw-utils"]
+	path = bundle/vim-addon-mw-utils
+	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
+[submodule "bundle/snipmate-snippets"]
+	path = bundle/snipmate-snippets
+	url = https://github.com/honza/snipmate-snippets
+[submodule "bundle/vim-snipmate"]
+	path = bundle/vim-snipmate
+	url = git://github.com/javipolo/vim-snipmate.git
