--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/vim-snipmate"]
 	path = bundle/vim-snipmate
 	url = git://github.com/javipolo/vim-snipmate.git
+[submodule "bundle/vim-varnish"]
+	path = bundle/vim-varnish
+	url = git://github.com/javipolo/vim-varnish.git
