new nerdcommenter module and vim-varnish update

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/vim-varnish"]
 	path = bundle/vim-varnish
 	url = git://github.com/javipolo/vim-varnish.git
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = git://github.com/scrooloose/nerdcommenter.git
