--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
 	url = git://github.com/scrooloose/nerdcommenter.git
+[submodule "bundle/vim-autochmod"]
+	path = bundle/vim-autochmod
+	url = git://github.com/javipolo/vim-autochmod.git
