--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,3 @@
-[submodule "bundle/puppet"]
-	path = bundle/puppet
-	url = git://github.com/rodjek/vim-puppet.git
-[submodule "bundle/tabular"]
-	path = bundle/tabular
-	url = git://github.com/godlygeek/tabular.git
-[submodule "bundle/fugitive"]
-	path = bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive.git
-[submodule "bundle/surround"]
-	path = bundle/surround
-	url = git://github.com/tpope/vim-surround.git
-[submodule "bundle/comentary"]
-	path = bundle/comentary
-	url = git://github.com/tpope/vim-commentary.git
-[submodule "bundle/repeat"]
-	path = bundle/repeat
-	url = git://github.com/tpope/vim-repeat.git
-[submodule "bundle/unimpaired"]
-	path = bundle/unimpaired
-	url = git://github.com/tpope/vim-unimpaired.git
-[submodule "bundle/haproxy"]
-	path = bundle/haproxy
-	url = https://github.com/javipolo/vim-haproxy
-[submodule "bundle/vim-varnish"]
-	path = bundle/vim-varnish
-	url = git://github.com/javipolo/vim-varnish.git
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
-	url = git://github.com/scrooloose/nerdcommenter.git
-[submodule "bundle/vim-autochmod"]
-	path = bundle/vim-autochmod
-	url = git://github.com/javipolo/vim-autochmod.git
-[submodule "bundle/nerdtree"]
-	path = bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
-[submodule "bundle/golden-ratio"]
-	path = bundle/golden-ratio
-	url = https://github.com/roman/golden-ratio
+[submodule "bundle/vundle"]
+	path = bundle/vundle
+	url = https://github.com/gmarik/vundle.git
